--- a/trabajo.html
+++ b/trabajo.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/_5429600e-1394-4065-9430-daacbd87a985.jpg">
     <title>Servicio profesional</title>
 </head>
 <body>
