--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
 <body>
     <header id="menu-container">
          <h1>Servicio de Psicología Profesional</h1>
-           <ul id="ul">
-             <button id="button"><a href="trabajo.html">¿Quién soy?</a></button>
-            
-             <button id="button"><a href="queOfrecemos.html">¿Qué ofrezco?</a></button>
+         <nav>
+          <ul class="sidebar">
+            <li id="button" onclick=hideSideBar()><a ><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
+             <li id="button" ><a href="trabajo.html">¿Quién soy?</a></li>
+             <li id="button"><a href="queOfrecemos.html">¿Qué ofrezco?</a></li>
+          </ul>
+           <ul >
+             <li id="button" class="hideOnMobile"><a href="trabajo.html">¿Quién soy?</a></li>
+             <li id="button"class="hideOnMobile"><a href="queOfrecemos.html">¿Qué ofrezco?</a></li>
+             <li onclick=showSideBar()><a href=""><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
            </ul>
+         </nav>
    </header>
   <main>
           <h2 id="subtitulo">Especialista en Neuropsicología Clínica para Adultos</h2>
@@ -42,5 +49,16 @@
     </div>  
   </section>
    </footer>
+   <script>
+    function showSideBar(){
+      const sidebar= document.querySelector(".sidebar")
+      sidebar.style.display ='flex'
+    }
+    function hideSideBar(){
+      const sidebar= document.querySelector(".sidebar")
+      sidebar.style.display='none'
+    }
+
+   </script>
 </body>
 </html>
