--- a/queOfrecemos.html
+++ b/queOfrecemos.html
@@ -7,18 +7,21 @@
     <link rel="icon" href="img/_5429600e-1394-4065-9430-daacbd87a985.jpg">
     <title>Servicio profesional</title>
 </head>
-<body>
-    <header id="menu-container">
-        <h1>Servicio de Psicología Profesional</h1>
-        
-        <nav>
-          <ul>
-            <button><a href="trabajo.html">¿Quién soy?</a></button>
-           
-            <button><a href="index.html">Principal</a></button>
-          </ul>
-       </nav>
-   </header>
+<header id="menu-container">
+  <h1>Servicio de Psicología Profesional</h1>
+  <nav>
+   <ul class="sidebar">
+     <li id="button" onclick=hideSideBar()><a ><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
+      <li id="button" ><a href="trabajo.html">¿Quién soy?</a></li>
+      <li id="button"><a href="index.html">Principal</a></li>
+   </ul>
+    <ul >
+      <li id="button" class="hideOnMobile"><a href="trabajo.html">¿Quién soy?</a></li>
+      <li id="button"class="hideOnMobile"><a href="index.html">Principal</a></li>
+      <li onclick=showSideBar()><a href=""><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
+    </ul>
+  </nav>
+</header>
     <section>
              <h1>¿Qué ofrezco?</h1>
              <h4>Ofrezco un servicio de asistencia psicológica individual a pacientes, preferentemente adultos. Me enfoco principalmente en la psicología conductual y neurológica.
@@ -45,5 +48,16 @@
       </div>  
     </section>
      </footer>
+     <script>
+      function showSideBar(){
+        const sidebar= document.querySelector(".sidebar")
+        sidebar.style.display ='flex'
+      }
+      function hideSideBar(){
+        const sidebar= document.querySelector(".sidebar")
+        sidebar.style.display='none'
+      }
+  
+     </script>
 </body>
 </html>
