--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@ function showSideBar(){
   const sidebar = document.querySelector(".sidebar");
   sidebar.style.display = 'flex';
 }
-
 function hideSideBar(){
   const sidebar = document.querySelector(".sidebar");
   sidebar.style.display = 'none';
@@ -100,6 +99,7 @@ function darkMode(){
     menuIcons.forEach(icon => {
         icon.style.fill = "white";
     });
+    document.body.classList.add('dark-mode');
     const a = document.querySelector("a");
     const footer = document.querySelector("footer");
     const header = document.querySelector("header");
@@ -114,13 +114,11 @@ function darkMode(){
     body.style.color = "white";
     dark.style.display = 'none';
     light.style.display = 'flex';
-
     boxes.forEach(box => {
         box.style.backgroundColor = "#42785e";
         box.style.color = "white";
     });
 }
-
 function lightMode(){
   const menuItems = document.querySelectorAll("#menu-container ul:not(.sidebar) a");
     const menuIcons = document.querySelectorAll("#menu-container ul:not(.sidebar) svg");
@@ -130,6 +128,7 @@ function lightMode(){
     menuIcons.forEach(icon => {
         icon.style.fill = "black";
     });
+    document.body.classList.remove('dark-mode');
 
     const a = document.querySelector("a");
     const footer = document.querySelector("footer");
